# Zenith

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
Assets/minecraft/mcpatcher/sky/world0/: sky1.properties
Configs/: BlockRegistry.json  config.json  player_config.json
Include/: CMakeLists.txt
Scripts/: record_voxel_engine.sh  split_textures.py
Source/: BlockTypeViewers.cpp  HutModelViewer.cpp  PrintAllBlockTypes.cpp  TreeModelViewer.cpp
Source/Blocks/: Block.cpp  Block.h  BlockRegistryReader.cpp  BlockRegistryReader.h  Voxel.cpp  Voxel.h
Source/Camera/: Camera.h  FreeCamera.cpp  FreeCamera.h  WindowManager.cpp  WindowManager.h
Source/ConfigManager/: ConfigReader.cpp  ConfigReader.h
Source/GameControls/: KeyboardHandler.cpp  KeyboardHandler.h  MouseHandler.cpp  MouseHandler.h
Source/Shaders/: Shader.cpp  Shader.h  block.glsl  shadow_mapping.frag  shadow_mapping.vert  skybox.vert  voxel_fragment.glsl  voxel_vertex.glsl
Source/Utils/: ShaderUtils.cpp  ShaderUtils.h  SystemUsage.cpp
Source/World/Models/: BaseModel.cpp  BaseModel.h  HutModel.cpp  HutModel.h  TreeModel.cpp  TreeModel.h
